# pocs

./: .gitignore
Draggable/: .angular-cli.json  README.md  package.json
FormGenerator/: .angular-cli.json  package.json
angular-components/: README.md
angular-elements-website/: README.md  index.html
angular-elements-website/libs/: main.js  polyfills.js  styles.js
angular-popup/: README.md  angular.json  package-lock.json  package.json
angular-popup/public/: popup.html
angular-popup/src/: index.html  styles.scss
emdeded-postgres-test/: package-lock.json  package.json  test.js
grpc_test/: grpc_ns.yaml  readme.md
grpc_test/grpc_different_versions_test/: build.sh  deployment.yaml
grpc_test/grpc_insecure_test/: .gitignore  Dockerfile
grpc_test/grpc_mtls_test/: Dockerfile  build.sh  deployment.yaml
html-popup/: index.html  index2.html  run.sh
iggy-poc/: README.md
iggy-poc/clients/: consumer.py
iggy-poc/clients/rust/: Cargo.toml  README.md
iggy-poc/clients/rust/src/: consumer.rs  producer.rs
iggy-poc/docs/: architecture.md  iggy-concepts.md
iggy-poc/server/: docker-compose.yml
nodeapi/: app.js  package-lock.json  package.json
ocr_testing/: .gitignore
ocr_testing/marker/: readme.md  requirements.txt
react-popup/: README.md  index.html  popup.html
request_handler/: .gitignore  README.md  requirements.txt  tor-setup-instructions.md
request_handler/RequestHandler/: RequestHandler.py  TorRequestHandler.py
threeControls/: .angular-cli.json  README.md  package.json
threeControls/documentation/: coverage.html  dependencies.html  (+3 more)
(+95 files in other folders)
